--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "react-dom": "^17.0.1",
     "react95": "^3.10.0",
     "styled-components": "^5.3.3"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
