--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react95/core": "^5.7.2",
     "@react95/gatsby-theme": "^1.3.0",
     "gatsby": "^4.6.2",
+    "gatsby-plugin-sitemap": "^5.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react95": "^3.10.0",
